--- a/ConsoleAppExample/ConsoleAppExample/ConsoleAppExample.csproj
+++ b/ConsoleAppExample/ConsoleAppExample/ConsoleAppExample.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Entities\EventData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\FileSystemView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
